# codex-keybored

./: .gitattributes  .gitignore  README.md  firmware-and-compliance-notes.md  index.html  mechanical-bom.md
cnc/: REV_B_FACTORY_README.md  generate_rev_b_step.py  rev_b_fit_report.json  rev_b_geometry_manifest.json  rev_b_spec.json  verify_rev_b.py
docs/: build_root.mjs  index.html  render_report.mjs  render_schematic.mjs  schematic.html
electronics/: README.md  add_ground_planes.py  add_power_fanouts.py  build_fab_package.sh  clean_manufacturing_markings.py  export_dsn.py  generate_jlc_outputs.py  generate_wired_reva.py  import_ses.py  inspect_manual_routes.py  prepare_ground_dsn.py  prepare_routing_dsn.py  ripup_drc_nets.py  route_controller_island.py  route_finish_escape.py  route_remaining_astar.py  route_remaining_manual.py  route_usb_reversible_pair.py  stitch_ground_islands.py
firmware/: CMakeLists.txt  README.md  factory_key_test.html  main.c  tusb_config.h  usb_descriptors.c  ws2812.pio
firmware/release/: SHA256SUMS.txt  codex_micro_wired_reva.dis  codex_micro_wired_reva.elf  codex_micro_wired_reva.elf.map  codex_micro_wired_reva.hex  codex_micro_wired_reva.uf2
firmware/stm32/: CMakeLists.txt  README.md  fetch_dependencies.sh  main.c  tusb_config.h  usb_descriptors.c
firmware/stm32/board/codeks_keybored/: board.cmake  board.h
firmware/stm32/release/: SHA256SUMS.txt  codeks_keybored_revA.elf  codeks_keybored_revA.elf.map.json  codeks_keybored_revA.hex
fusion/: Codex_Micro_RevA.f3d  build_codex_micro_mechanical.py  close_generated_temp_documents.py  correct_codex_layout_v2.py  correct_codex_layout_v3.py  export_codex_archive.py  export_codex_micro_cnc.py  save_codex.py  (+7 more)
(+68 files in other folders)
